# lerobot-bench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: bench-eval-engineer.md  devx-toolsmith.md  render-pipeline-engineer.md  researcher-writeup.md  spaces-frontend-engineer.md  stats-rigor-reviewer.md  sweep-sre.md  upstream-contributor.md
.claude/hooks/: .gitignore  README.md  block-dangerous-git.sh  calibration-hint.sh  post-agent-rebind.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  propose-a-policy.yml  result-discrepancy.yml
.github/workflows/: ci.yml  install-smoke.yml  release.yml  smoke.yml  space-smoke.yml  validate-configs.yml  wm-smoke.yml
configs/: envs.yaml  policies.yaml  sweep_full.yaml  sweep_mini.yaml  sweep_v11_libero.yaml
dashboard/: README.md  _helpers.py  app.py  requirements.txt
design/: README.md  palette.json
docs/: API.md  ARCHITECTURE.md  AUDIT_2026_05_27.md  CANONICAL_CRITERIA.md  CEO-PLAN.md  CLAIM_AUDIT_SMOLVLA.md  COMMS_PLAN.md  DEFERRED_POLICIES.md  DESIGN.md  ENV_CONTRIBUTION_GUIDE.md  EXPANSION_PLAN.md  FAILURE_TAXONOMY.md  FAQ.md  GETTING_STARTED.md  HUB_DATASET_README.md  INFERENCE_AUDIT.md  MDE_TABLE.md  MODEL_CARDS.md  MONITORING.md  NEXT_STEPS.md  ORCHESTRATION.md  ORCHESTRATION_PLAYBOOK.md  PATH_B_INTEGRATION_SMOKE.md  PIPELINE_ROADMAP.md  POLICY_DIAGRAM_GUIDE.md  PROBE_RESULTS_V1.0.1.md  PUBLISH_RUNBOOK.md  README.md  REPRODUCE.md  RUNBOOK.md  SECURITY.md  SECURITY_AUDIT.md  SUCCESS_CRITERION_AUDIT.md  TROUBLESHOOTING.md  TWO_SPEED.md  WM_RESEARCH_TRACK.md
docs/assets/: README.md  failure-taxonomy-labels.csv  make_failure_taxonomy_fig.py
docs/blog/: capability-ladder-audit.md
docs/ladder/: L1_smolvla_lora_collapse.md  README.md
docs/tutorials/: interpreting-the-leaderboard.md
docs/upstream/: ISSUE_DRAFT_act_temporal_ensemble_default.md
examples/: README.md  compare_two_policies.py  read_results.py  results-mini.parquet  run_one_cell.md  write_a_probe.md
notebooks/: 01-write-finding.ipynb  try_embodimetry.ipynb
paper/: .gitignore  Makefile  main.tex  references.bib
paper/deck/: index.html
results/ladder/: act_aloha_l1.summary.json  classical_pusht_l2.parquet  classical_pusht_l2.summary.json  smolvla_libero10_l1.summary.json
scripts/: __init__.py  audit_inference_settings.py  auto_downscope.py  calibrate.py  calibrate_mde.py  family_correction.py  gpu_preflight.sh  launch_overnight_sweep.sh  make_results_mini.py  merge_calibration.py  merge_corrected_act_rows.py  prefetch_vlas.py  publish_results.py  render_figures.py  reproduce_cell.py  review_results.py  run_capped.sh  run_ladder_l1_finetune.py  run_ladder_l1_smolvla_lora.py  run_ladder_l2_classical.py  run_one.py  run_sweep.py  run_with_caps.sh  smoke_streaming_encode.py  watchdog.py  with_gpu_lock.sh  wm_run_log.py
scripts/probes/: _common.py  (+3 more)
site/: README.md  index.html  style.css
space/: README.md  _helpers.py  app.py  requirements.txt
src/embodimetry/: eval.py  (+4 more)
tests/: conftest.py  test_audit_inference_settings.py  test_calibrate.py  test_canonical_criteria.py  test_checkpointing.py  test_cli.py  test_dashboard.py  test_envs.py  test_eval.py  test_factory_contract.py  test_figures.py  test_gpu_preflight.py  test_ladder_l1_finetune.py  test_ladder_l1_smolvla_lora.py  test_leaderboard_filter_parity.py  test_mde_consistency.py  test_merge_and_downscope.py  test_merge_corrected_act_rows.py  test_no_ungated_l3_claims.py  test_per_episode_taxonomy.py  test_policies.py  test_publish_preflight_coverage.py  test_publish_results.py  test_render.py  test_reproduce_cell.py  test_results_mini_zero_gpu.py  test_resume_drill.py  test_review_results.py  test_run_one.py  test_run_sweep.py  test_space.py  test_space_helpers.py  test_stats.py  test_version.py  test_vram_scheduler.py  test_watchdog_vram_ceiling.py
(+11 files in other folders)
