[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-bench"
version = "0.0.1"
description = "Public multi-policy benchmark for pretrained LeRobot policies on PushT, Aloha, and Libero sim envs."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Théo Hermann", email = "thermann.ai@gmail.com" },
]
keywords = ["robotics", "reinforcement-learning", "benchmark", "lerobot", "imitation-learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "lerobot==0.5.1",
    "torch>=2.7,<3.0",
    "numpy>=2.0,<3.0",
    "scipy>=1.13,<2.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=18.0",
    "huggingface-hub>=0.30",
    "datasets>=4.0",
    "imageio[ffmpeg]>=2.37",
    "tqdm>=4.66",
    "rich>=13.9",
]

[project.optional-dependencies]
sim = [
    # Pulled transitively via lerobot[pusht,aloha,libero] in editable installs;
    # listed here so a fresh install from PyPI gets sim envs too.
    "gym-pusht>=0.1",
    "gym-aloha>=0.1",
    "mujoco>=3.2",
]
viz = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
]
space = [
    "gradio>=5.0",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-PyYAML>=6.0",
]
all = [
    "lerobot-bench[sim,viz,space,dev]",
]

[project.urls]
Homepage = "https://github.com/thrmnn/lerobot-bench"
Repository = "https://github.com/thrmnn/lerobot-bench"
Issues = "https://github.com/thrmnn/lerobot-bench/issues"

[project.scripts]
lerobot-bench = "lerobot_bench.cli:main"

# ---- setuptools ----

[tool.setuptools.packages.find]
where = ["src"]
include = ["lerobot_bench*"]

[tool.setuptools.package-data]
lerobot_bench = ["py.typed"]

# ---- ruff ----

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "N812",   # lowercase imported as uppercase (torch.nn.functional as F)
    "RUF001", # ambiguous Unicode in strings — we use ×, √, ≥ in math docstrings
    "RUF002", # same, in docstrings
    "RUF003", # same, in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"notebooks/**" = ["E402", "F401"]
"scripts/**" = ["T201"]  # allow print()

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---- pytest ----

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: tests that take >5s",
    "gpu: tests requiring CUDA",
    "sim: tests requiring sim env (mujoco, gym-pusht, etc.)",
]

[tool.coverage.run]
source = ["src/lerobot_bench"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ---- mypy ----

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "lerobot.*",
    "gym_pusht.*",
    "gym_aloha.*",
    "mujoco.*",
    "imageio.*",
    "scipy.*",
]
ignore_missing_imports = true
